src/test/ui/loops/loop-proper-liveness.nll.stderr
error[E0381]: borrow of possibly uninitialized variable: `x`
  --> $DIR/loop-proper-liveness.rs:9:22
   |
LL |     println!("{:?}", x);
   |                      ^ use of possibly uninitialized `x`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0381`.
